--- a/writing/task_1/table/181103.md
+++ b/writing/task_1/table/181103.md
@@ -1,4 +1,4 @@
-[🔙 Back to List](./index.md)
+[🔙 Back to List](../index.md)
 
 ## Reqiurement
 The table below shows the percentage of water used in three sectors in six different countires in 2003.
