--- a/writing/task_1/flow/180519.md
+++ b/writing/task_1/flow/180519.md
@@ -6,7 +6,7 @@ The diagrams below show the process of applying for a driver license in America.
 ![](../images/180519.jpg)
 
 ## Article
-the digrams above illustrate that how to applying for a driver license in America.
+The digrams above illustrate how to apply for a driver license in America.
 
 First of all, the applicant should go to the center and complete a application form. After that, an eye test is performed to make sure that the applicant meet the eyesight requirement of acquiring a driver license. If the applicant fails in the test, he won't have any chance to obtain a driver license. If his eyesight is good enough, then he can pay the fee and enter the formal test process.
 
